[gd_scene load_steps=18 format=3 uid="uid://fl2xbcx5ahha"]

[ext_resource type="Script" path="res://scenes/ui/meta_upgrade_card.gd" id="1_q3qpk"]
[ext_resource type="PackedScene" uid="uid://d01qsx7i43xtf" path="res://scenes/components/random_stream_player_component.tscn" id="2_e2ajo"]
[ext_resource type="AudioStream" uid="uid://je1drwn1sbj0" path="res://assets/audio/switch1.ogg" id="3_kkr0u"]
[ext_resource type="AudioStream" uid="uid://gf8iu2rsamgd" path="res://assets/audio/switch2.ogg" id="4_s7yuw"]
[ext_resource type="AudioStream" uid="uid://c527vmq1t03g1" path="res://assets/audio/switch3.ogg" id="5_f3gdf"]
[ext_resource type="AudioStream" uid="uid://bujt4j25ie76t" path="res://assets/audio/switch4.ogg" id="6_cwjg0"]
[ext_resource type="AudioStream" uid="uid://c5eh0mweeexpo" path="res://assets/audio/switch5.ogg" id="7_lyq2i"]
[ext_resource type="AudioStream" uid="uid://bnt24di5h7p3p" path="res://assets/audio/switch6.ogg" id="8_n5dih"]
[ext_resource type="AudioStream" uid="uid://cgb40d8bjn6ym" path="res://assets/audio/switch7.ogg" id="9_iuqoj"]
[ext_resource type="AudioStream" uid="uid://wxhw2d8a57vq" path="res://assets/audio/switch8.ogg" id="10_mmrhb"]
[ext_resource type="AudioStream" uid="uid://bascgfej2q8rg" path="res://assets/audio/switch9.ogg" id="11_thfgn"]
[ext_resource type="AudioStream" uid="uid://drybao4e5oqdd" path="res://assets/audio/switch10.ogg" id="12_h65rv"]
[ext_resource type="Texture2D" uid="uid://dwlgth781t07n" path="res://scenes/game_objects/experience_vial/experience_vial.png" id="13_bojkm"]

[sub_resource type="Animation" id="Animation_bc274"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_bap54"]
resource_name = "selected"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.4),
"transitions": PackedFloat32Array(1, 2.07053, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 0.0872665, 0.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ClickPlayerComponent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_random"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ajj1y"]
_data = {
"RESET": SubResource("Animation_bc274"),
"selected": SubResource("Animation_bap54")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6bd42"]
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.458824, 0.890196, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0)

[node name="MetaUpgradeCard" type="PanelContainer" groups=["meta_upgrade_card"]]
custom_minimum_size = Vector2(170, 0)
offset_right = 152.0
offset_bottom = 160.0
pivot_offset = Vector2(75, 80)
script = ExtResource("1_q3qpk")

[node name="ClickPlayerComponent" parent="." instance=ExtResource("2_e2ajo")]
streams = Array[AudioStream]([ExtResource("3_kkr0u"), ExtResource("4_s7yuw"), ExtResource("5_f3gdf"), ExtResource("6_cwjg0"), ExtResource("7_lyq2i"), ExtResource("8_n5dih"), ExtResource("9_iuqoj"), ExtResource("10_mmrhb"), ExtResource("11_thfgn"), ExtResource("12_h65rv")])

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ajj1y")
}

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 12

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"AlternatePanelContainer"

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
theme_override_font_sizes/font_size = 32
text = "name"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 10)
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
text = "description"
autowrap_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = -1

[node name="ProgressLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme_type_variation = &"BlueOutlineLabel"
text = "50/200"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_6bd42")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/Control"]
layout_mode = 2
offset_left = -5.0
offset_top = -5.0
offset_right = 11.0
offset_bottom = 11.0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
texture = ExtResource("13_bojkm")

[node name="PurchaseButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "meta_upgrades_purchase_button"
